# Ai_Rag_Backend_System

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  cli.py  main.py  web.py
app/api/: routes.py
app/core/: dependencies.py  settings.py
app/models/: schemas.py
app/services/: app_store.py  chunker.py  embeddings.py  llm.py  rag.py  seed.py  vector_store.py
tests/: test_api.py  test_chunker.py  test_rag.py  test_settings.py
